--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header>
     <nav>
         <a href="index.html">Home</a>
-        <a href="about Me.html">About Me</a>
+        <a href="About Me.html">About Me</a>
         <a href="contact.html">Contact</a>
         <a href="gallery.html">Gallery</a>
     </nav>
@@ -44,4 +44,5 @@
 </footer>
 
 </body>
+
 </html>
