--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
 <header>
     <nav>
         <a href="index.html">Home</a>
-        <a href="about-me.html">About Me</a>
+        <a href="About Me.html">About Me</a>
         <a href="contact.html">Contact</a>
         <a href="gallery.html">Gallery</a>
     </nav>
@@ -43,4 +43,5 @@
 </footer>
 
 </body>
+
 </html>
